--- a/react-vite/src/components/HomePage/HomePage.css
+++ b/react-vite/src/components/HomePage/HomePage.css
@@ -127,3 +127,9 @@
         grid-template-columns: 1fr 1fr;
     }
 }
+
+@media screen and (min-width: 769px) and (max-width: 1024px) {
+    .categoryContainer {
+        grid-template-columns: 1fr 1fr;
+    }
+}
