--- a/react-vite/src/components/ManageBusinessesPage/ManageBusiness.css
+++ b/react-vite/src/components/ManageBusinessesPage/ManageBusiness.css
@@ -181,17 +181,16 @@
 
   .businessesImageWrapper {
     width: auto;
-    height: 200px;
+    height: 300px;
   }
 
   .businessesImage {
     width: 100%;
-    height: 200px;
+    height: 300px;
   }
 
   .businessDeets {
     width: 90%;
-    margin-left: 5vw;
     padding-top: 0;
     padding-bottom: 15px;
   }
@@ -205,7 +204,8 @@
   }
 
   .recent-review-text {
-    inline-size: 60vw;
+    inline-size: auto;
+    ;
   }
 
   .card {
@@ -232,6 +232,75 @@
     right: 0;
     height: fit-content;
     margin-right: 50px;
+  }
+
+  .deleteModal {
+    width: 65vw;
+  }
+
+}
+
+@media screen and (min-width: 769px) and (max-width: 1024px) {
+  .manBizCards {
+    margin: auto;
+    width: 75vw;
+    flex-direction: column;
+  }
+
+  .businessesImageWrapper {
+    width: auto;
+    height: 300px;
+  }
+
+  .businessesImage {
+    width: 100%;
+    height: 300px;
+  }
+
+  .businessDeets {
+    width: 90%;
+    padding-top: 0;
+    padding-bottom: 15px;
+    position: relative;
+
+  }
+
+  .businessDeets h2,
+  .priceSubcat,
+  .searchStars,
+  .todayHours {
+    width: fit-content;
+    margin-top: 0px;
+  }
+
+  .recent-review-text {
+    inline-size: auto;
+  }
+
+  .card {
+    padding-bottom: 20px;
+  }
+
+  .bizandbutton {
+    padding-bottom: 20px;
+  }
+
+  .manBizPage {
+    width: 90vw;
+  }
+
+  .manbutton {
+    margin: 0 10px;
+  }
+
+  .manage-dropdown {
+    display: flex;
+    flex-direction: column;
+    position: absolute;
+    margin-top: 5px;
+    right: 0;
+    height: fit-content;
+    margin-right: 5vw;
   }
 
   .deleteModal {
