--- a/react-vite/src/components/SingleBusinessPage/BusinessMap.css
+++ b/react-vite/src/components/SingleBusinessPage/BusinessMap.css
@@ -27,3 +27,13 @@
         width: 50vw;
     }
 }
+
+@media screen and (min-width: 769px) and (max-width: 1024px) {
+    #map {
+        width: 100%;
+    }
+
+    #map-canvas {
+        width: 100%;
+    }
+}
