--- a/react-vite/src/components/SingleBusinessPage/SingleBusiness.css
+++ b/react-vite/src/components/SingleBusinessPage/SingleBusiness.css
@@ -517,3 +517,71 @@
         display: none;
     }
 }
+
+
+@media screen and (min-width: 769px) and (max-width: 1024px) {
+
+    .businessContainer {
+        width: 90vw;
+        display: grid;
+        grid-template-columns: 2fr 1fr;
+    }
+
+    .businessDetails {
+        width: auto;
+
+    }
+
+    .businessDetails button {
+        padding: 10px
+    }
+
+    .businessWebsiteContainer,
+    .businessPhoneContainer,
+    .businessAddressContainer {
+        flex-direction: row;
+        padding-bottom: 0;
+        text-decoration: none;
+    }
+
+    .businessWebsiteContainer a,
+    .businessPhoneContainer a,
+    .businessAddressContainer a {
+        color: #1f2f44;
+    }
+
+    .businessContactIcon {
+        padding-left: 0;
+    }
+
+    .businessContactIcon i {
+        font-size: x-large;
+    }
+
+    .locationHours {
+        width: auto;
+    }
+
+    .locationHoursContainer {
+        row-gap: 20px;
+        /* justify-content: center; */
+    }
+
+    .hours {
+        column-gap: 20px;
+    }
+
+    .businessContact {
+        width: auto;
+    }
+
+    .businessCardDetail {
+        width: 18vw;
+        word-wrap: break-word;
+    }
+
+    .businessDetailsLocation {
+        gap: 20px;
+    }
+
+}
