--- a/react-vite/src/components/SinglePhotoModal/SinglePhotoModal.css
+++ b/react-vite/src/components/SinglePhotoModal/SinglePhotoModal.css
@@ -16,3 +16,9 @@
         width: 65vw;
     }
 }
+
+@media screen and (min-width: 769px) and (max-width: 1024px) {
+    .singlePhoto {
+        width: 65vw;
+    }
+}
