--- a/react-vite/src/components/AllPhotosModal/AllPhotos.css
+++ b/react-vite/src/components/AllPhotosModal/AllPhotos.css
@@ -154,3 +154,9 @@
         width: 90vw;
     }
 }
+
+@media screen and (min-width: 769px) and (max-width: 1024px) {
+    .page {
+        width: 90vw;
+    }
+}
