--- a/react-vite/src/components/SearchFormPage/SearchForm.css
+++ b/react-vite/src/components/SearchFormPage/SearchForm.css
@@ -27,7 +27,7 @@
   clip-path: inset(0 100% 0 0);
   animation: l12 2s infinite steps(7);
   margin: auto;
-  padding-bottom: 10px;
+  padding: 20px 0;
 }
 .loader:before {
   content: "";
