--- a/react-vite/src/components/SearchFormPage/SearchForm.css
+++ b/react-vite/src/components/SearchFormPage/SearchForm.css
@@ -14,6 +14,8 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  width: 700px;
+  margin-left: 300px;
 }
 
 
@@ -233,6 +235,11 @@ select {
     flex-direction: column;
   }
 
+  .pagination {
+    margin: auto;
+    width: auto;
+  }
+
   .businessesImageWrapper {
     width: auto;
     height: 200px;
@@ -313,6 +320,11 @@ select {
     flex-direction: column;
   }
 
+  .pagination {
+    margin: auto;
+    width: auto;
+  }
+
   .businessesImageWrapper {
     width: 100%;
     height: 400px;
@@ -389,6 +401,12 @@ select {
   .businessCards {
     width: auto;
     flex-direction: column;
+  }
+
+  .pagination {
+    /* margin-left: auto; */
+    /* margin-right: 2vw; */
+    width: auto;
   }
 
   .businessesImageWrapper {
