--- a/react-vite/src/components/SearchBar/SearchBar.css
+++ b/react-vite/src/components/SearchBar/SearchBar.css
@@ -1,7 +1,6 @@
 .predictions-container {
   position: absolute;
-  top: calc(8% + 5px); /* Adjust the offset as needed */
-  
+  top: calc(8% + 2vh);
   padding: 20px;
   background: #fffbf6;
   border: 1px solid #ccc;
