--- a/react-vite/src/components/SearchBar/SearchBar.css
+++ b/react-vite/src/components/SearchBar/SearchBar.css
@@ -1,13 +1,14 @@
 .predictions-container {
   position: absolute;
-  bottom: inherit;
+  top: inherit;
   padding: 20px;
   background: #fffbf6;
   border: 1px solid #ccc;
-  border-radius: 4px;
+  border-radius: 5px;
   z-index: 1000;
-  width: 17vw;
-
+  width: 18vw;
+  margin-top: 50px;
+  border: none;
 }
 
 .predictions-container ul {
