--- a/react-vite/src/index.css
+++ b/react-vite/src/index.css
@@ -80,6 +80,11 @@
      color: #c3cddf;
  }
 
+ .paws-half {
+     width: 24px;
+     padding-right: 6px;
+ }
+
  a {
      color: #5f5ba8;
      text-decoration: none;
