gave location input more width

--- a/react-vite/src/components/SearchBar/SearchBar.css
+++ b/react-vite/src/components/SearchBar/SearchBar.css
@@ -21,7 +21,7 @@
   text-decoration: none;
   font-weight: 500;
   cursor: pointer;
-  padding: 10px ;
+  padding: 10px;
 }
 
 .suggestions:hover {
@@ -34,4 +34,8 @@
 
 .location-search-container {
   display: flex;
+}
+
+.location-search-container input {
+  width: 20vw;
 }
