--- a/react-vite/src/components/SingleBusinessPage/SingleBusiness.css
+++ b/react-vite/src/components/SingleBusinessPage/SingleBusiness.css
@@ -108,10 +108,13 @@
     font-size: x-large !important;
 }
 
+
 .businessPhotoHeader .pawBlock {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
     background-color: #FFFFFF !important;
     width: fit-content !important;
-    padding: 10px 6px 3px 6px !important;
+    padding: 3px 6px 3px 6px !important;
     border-radius: 5px !important;
     align-items: center;
     justify-content: center;
@@ -125,6 +128,11 @@
     font-size: 18px;
     margin-top: 14px;
     margin-bottom: 14px;
+}
+
+.paws-half {
+    display: flex;
+    align-items: center;
 }
 
 .priceSubcat {
