--- a/react-vite/src/components/SearchFormPage/SearchForm.css
+++ b/react-vite/src/components/SearchFormPage/SearchForm.css
@@ -266,6 +266,11 @@ select {
     margin-top: 0px;
   }
 
+  .searchStars {
+    display: grid;
+    align-items: center;
+  }
+
   .recent-review-text {
     inline-size: auto;
   }
