paws are in line on search form page and manage biz page

--- a/react-vite/src/index.css
+++ b/react-vite/src/index.css
@@ -80,6 +80,12 @@
      color: #c3cddf;
  }
 
+ .paws-wrapper {
+    display: flex;
+    align-items: center;
+    justify-items: center;
+  }
+
  .paws-half {
      width: 24px;
      margin: 0px 3px;
@@ -88,10 +94,12 @@
  }
 
  .paws-half-biz {
+     display: grid;
      width: 18px;
-     /* display: flex; */
      margin-top: 2px;
      margin-right: 4px;
+     text-align: center;
+     justify-items: center;
  }
 
  a {
@@ -141,6 +149,13 @@
  .loginSignupModals button {
      width: 100%;
  }
+
+ .searchStars {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    
+  }
 
 
  .loginSignupModals .errors {
