--- a/react-vite/src/components/SingleBusinessPage/SingleBusiness.css
+++ b/react-vite/src/components/SingleBusinessPage/SingleBusiness.css
@@ -78,7 +78,7 @@
     object-position: center;
     display: block;
     position: absolute;
-    background: linear-gradient(0deg, rgba(0, 0, 0, 0.9) 0%, rgba(0, 0, 0, 0) 50%);
+    background: linear-gradient(0deg, rgba(0, 0, 0, 0.9) 0%, rgba(0, 0, 0, 0) 75%);
 }
 
 .businessHeader {
@@ -466,8 +466,14 @@
         align-content: start;
     }
 
+    .seeAllPhotos button {
+        padding: 8px 25px 8px 25px;
+        font-size: 14px;
+    }
+
     .businessHeader h1 {
         width: 80vw;
+        font-size: 35px;
     }
 
     .businessPhotoHeader::before {
@@ -557,6 +563,11 @@
 
     .seeAllPhotosSection {
         justify-content: start;
+    }
+
+    .seeAllPhotos button {
+        padding: 8px 25px 8px 25px;
+        font-size: 14px;
     }
     
     .businessContainer {
