--- a/react-vite/src/components/HomePage/HomePage.css
+++ b/react-vite/src/components/HomePage/HomePage.css
@@ -124,7 +124,7 @@
 
 @media screen and (min-width: 481px) and (max-width: 768px) {
     .categoryContainer {
-        grid-template-columns: 1fr 1fr;
+        grid-template-columns: 1fr;
     }
 
     .photoHeaderText {
